@@ -33,6 +33,7 @@ export(GeomTextViewport)
 export(GeomTisoprop)
 export(GeomTline)
 export(GeomTmark)
+export(GeomTriTern)
 export(Larrowlab)
 export(Llab)
 export(Lline)
@@ -47,6 +48,7 @@ export(StatHexTern)
 export(StatInterpolateTern)
 export(StatMeanEllipse)
 export(StatSmoothTern)
+export(StatTriTern)
 export(Tarrowlab)
 export(Tlab)
 export(Tline)
@@ -98,6 +100,7 @@ export(geom_point_swap)
 export(geom_polygon_closed)
 export(geom_smooth_tern)
 export(geom_text_viewport)
+export(geom_tri_tern)
 export(getBreaks)
 export(getLabels)
 export(ggplot)
@@ -133,6 +136,7 @@ export(stat_hex_tern)
 export(stat_interpolate_tern)
 export(stat_mean_ellipse)
 export(stat_smooth_tern)
+export(stat_tri_tern)
 export(tern_anticlockwise)
 export(tern_clockwise)
 export(tern_counterclockwise)
