@@ -1,21 +1,19 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/geom-hex-tern.R, R/stat-hex-tern.R, R/geom-tri-tern.R
+% Please edit documentation in R/geom-tri-tern.R, R/stat-tri-tern.R
 \docType{data}
-\name{geom_hex_tern}
-\alias{GeomHexTern}
-\alias{GeomTriTern}
-\alias{StatHexTern}
-\alias{geom_hex_tern}
-\alias{stat_hex_tern}
-\title{Hexbin (ggtern version).}
+\name{geom_tri_tern}
+\alias{StatTriTern}
+\alias{geom_tri_tern}
+\alias{stat_tri_tern}
+\title{Tribin (ggtern version).}
 \usage{
-geom_hex_tern(mapping = NULL, data = NULL, stat = "hex_tern",
+geom_tri_tern(mapping = NULL, data = NULL, stat = "tri_tern",
   position = "identity", ..., fun = sum, na.rm = FALSE,
   show.legend = NA, inherit.aes = TRUE)
 
-stat_hex_tern(mapping = NULL, data = NULL, geom = "hex_tern",
-  position = "identity", ..., bins = 30, fun = sum, binwidth = NULL,
-  na.rm = FALSE, show.legend = NA, inherit.aes = TRUE)
+stat_tri_tern(mapping = NULL, data = NULL, geom = "tri_tern",
+  position = "identity", ..., bins = 30, fun = sum, na.rm = FALSE,
+  show.legend = NA, inherit.aes = TRUE)
 }
 \arguments{
 \item{mapping}{Set of aesthetic mappings created by \code{\link{aes}} or
@@ -63,23 +61,11 @@ the default plot specification, e.g. \code{\link{borders}}.}
 
 \item{bins}{numeric vector giving number of bins in both vertical and
 horizontal directions. Set to 30 by default.}
-
-\item{binwidth}{Numeric vector giving bin width in both vertical and
-horizontal directions. Overrides \code{bins} if both set.}
 }
 \description{
-Divides the plane into regular hexagons, counts the number of cases in
-each hexagon, and then (by default) maps the number of cases to the hexagon
-fill.  Hexagon bins avoid the visual artefacts sometimes generated by
-the very regular alignment of [geom_bin2d()].
-}
-\details{
-This geometry is loosely based on the base ggplot2 geom_hex, with a few subtle
-(but advantageous differences). The user can control the border thickness of the
-hexagonal polygons using the size aesthetic. The user can also control the
-particular statistic to use, by defining the \code{fun} argument (sum by default), which by default
-is applied over a value of 1 per point, however, this can also be mapped to a data variable
-via the 'value' mapping.
+Divides the plane into regular triangles, counts the number of cases in
+each triangles, and then (by default) maps the number of cases to the triangle
+fill.
 }
 \section{Aesthetics}{
 
@@ -92,23 +78,15 @@ df = data.frame(x  = runif(n),
                 y  = runif(n),
                 z  = runif(n),
                 wt = runif(n))
-                
 #Equivalent of Hexbin
 ggtern(df,aes(x,y,z)) + 
-    geom_hex_tern(binwidth=0.1)
-    
-#Calculate Mean of variable wt
-ggtern(df,aes(x,y,z)) + 
-     geom_hex_tern(binwidth=0.05,
-                   aes(value=wt),
-                   fun=mean)
+   geom_tri_tern(bins=10,aes(fill=..count..)) + 
+   geom_point(size=0.25)
 
-#Custom functions, for ex. discrete output...
-myfun = function(x) sample(LETTERS,1)
+#Custom Function, Mean
 ggtern(df,aes(x,y,z)) + 
-     geom_hex_tern(binwidth=0.05,
-                   fun=myfun)
-
+   geom_tri_tern(bins=5,aes(fill=..stat..,value=wt),fun=mean) + 
+   geom_point(size=0.25)
 }
 \keyword{datasets}
 
