@@ -5,6 +5,7 @@ ggtern 2.2.2
 * Additional datasets
 * Ternary version of hexbin
 * Update the theme(..) function to now include valid arguments relative to the new theme elements
+* New Geometry, geom_tri_tern and stat_tri_tern, which is like hexbin, but on triangular mesh
 
 ggtern 2.2.1
 ----------------------------------------------------------------
